--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listBrand.html
@@ -62,8 +62,6 @@
         <td th:text="${b.index + 1}"></td>
         <td th:text="${brand.name}"></td>
         <td th:text="${brand.country}"></td>
-        <td th:text="${#temporals.format(brand.createAt, 'dd-MM-yyyy HH:mm')}"></td>
-        <td th:text="${#temporals.format(brand.updateAt, 'dd-MM-yyyy HH:mm')}"></td>
         <td class="text-center">
           <button type="button" class="btn btn-warning editBrandBtn"
                   th:data-id="${brand.brandID}"
@@ -144,6 +142,7 @@
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/deleteMultipleBrand.js}"></script>
+<script th:src="@{/js/admin/brandValidation.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
