--- a/finalModule/finalModule/src/main/resources/static/css/admin/fragments/header.css
+++ b/finalModule/finalModule/src/main/resources/static/css/admin/fragments/header.css
@@ -188,3 +188,20 @@
     border-radius: 50%;
     margin-right: 10px;
 }
+.modal-logout {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 15px 25px;
+    border-radius: 8px;
+    text-align: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    font-size: 18px;
+}
