--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/header.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/header.html
@@ -36,7 +36,7 @@
             </a>
           </li>
           <li>
-            <a th:href="@{/logout}">
+            <a th:href="@{/logout}" id="logout-btn">
               <i class="fas fa-sign-out-alt"></i>
               Đăng xuất
             </a>
@@ -45,6 +45,12 @@
       </li>
     </ul>
   </div>
+  <div id="logout-modal" class="modal-logout">
+    <div class="modal-content">
+      <p>Đăng xuất thành công</p>
+    </div>
+  </div>
+
 </header>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 </body>
