--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -20,7 +20,7 @@
     </div>
     <ul class="sidebar-menu" data-widget="tree">
       <li>
-        <a th:href="@{/Admin}">
+        <a th:href="@{/sales/report}">
           <i class="fa fa-th"></i> <span>Báo cáo</span>
         </a>
       </li>
