--- a/finalModule/finalModule/src/main/resources/templates/login.html
+++ b/finalModule/finalModule/src/main/resources/templates/login.html
@@ -1,309 +1,51 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login</title>
-  <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-
-  <link rel="stylesheet" th:href="@{static/css/login.css}"/>
-  <link rel="stylesheet" href="resources/static/css/login.css"/>
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
-
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      background: #f6f5f7;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      font-family: 'Montserrat', sans-serif;
-      height: 100vh;
-      margin: -20px 0 50px;
-    }
-
-    h1 {
-      font-weight: bold;
-      margin: 0;
-    }
-
-    h2 {
-      text-align: center;
-    }
-
-    p {
-      font-size: 14px;
-      font-weight: 100;
-      line-height: 20px;
-      letter-spacing: 0.5px;
-      margin: 20px 0 30px;
-    }
-
-    span {
-      font-size: 12px;
-    }
-
-    a {
-      color: #333;
-      font-size: 14px;
-      text-decoration: none;
-      margin: 15px 0;
-    }
-
-    button {
-      border-radius: 20px;
-      border: 1px solid #FF4B2B;
-      background-color: #FF4B2B;
-      color: #FFFFFF;
-      font-size: 12px;
-      font-weight: bold;
-      padding: 12px 45px;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      transition: transform 80ms ease-in;
-    }
-
-    button:active {
-      transform: scale(0.95);
-    }
-
-    button:focus {
-      outline: none;
-    }
-
-    button.ghost {
-      background-color: transparent;
-      border-color: #FFFFFF;
-    }
-
-    form {
-      background-color: #FFFFFF;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      padding: 0 50px;
-      height: 100%;
-      text-align: center;
-    }
-
-    input {
-      background-color: #eee;
-      border: none;
-      padding: 12px 15px;
-      margin: 8px 0;
-      width: 100%;
-    }
-
-    .container {
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 14px 28px rgba(0,0,0,0.25),
-      0 10px 10px rgba(0,0,0,0.22);
-      position: relative;
-      overflow: hidden;
-      width: 768px;
-      max-width: 100%;
-      min-height: 480px;
-    }
-
-    .form-container {
-      position: absolute;
-      top: 0;
-      height: 100%;
-      transition: all 0.6s ease-in-out;
-    }
-
-    .sign-in-container {
-      left: 0;
-      width: 50%;
-      z-index: 2;
-    }
-
-    .container.right-panel-active .sign-in-container {
-      transform: translateX(100%);
-    }
-
-    .sign-up-container {
-      left: 0;
-      width: 50%;
-      opacity: 0;
-      z-index: 1;
-    }
-
-    .container.right-panel-active .sign-up-container {
-      transform: translateX(100%);
-      opacity: 1;
-      z-index: 5;
-      animation: show 0.6s;
-    }
-
-    @keyframes show {
-      0%, 49.99% {
-        opacity: 0;
-        z-index: 1;
-      }
-
-      50%, 100% {
-        opacity: 1;
-        z-index: 5;
-      }
-    }
-
-    .overlay-container {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      width: 50%;
-      height: 100%;
-      overflow: hidden;
-      transition: transform 0.6s ease-in-out;
-      z-index: 100;
-    }
-
-    .container.right-panel-active .overlay-container{
-      transform: translateX(-100%);
-    }
-
-    .overlay {
-      background: #FF416C;
-      background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-      background: linear-gradient(to right, #FF4B2B, #FF416C);
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: 0 0;
-      color: #FFFFFF;
-      position: relative;
-      left: -100%;
-      height: 100%;
-      width: 200%;
-      transform: translateX(0);
-      transition: transform 0.6s ease-in-out;
-    }
-
-    .container.right-panel-active .overlay {
-      transform: translateX(50%);
-    }
-
-    .overlay-panel {
-      position: absolute;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      padding: 0 40px;
-      text-align: center;
-      top: 0;
-      height: 100%;
-      width: 50%;
-      transform: translateX(0);
-      transition: transform 0.6s ease-in-out;
-    }
-
-    .overlay-left {
-      transform: translateX(-20%);
-    }
-
-    .container.right-panel-active .overlay-left {
-      transform: translateX(0);
-    }
-
-    .overlay-right {
-      right: 0;
-      transform: translateX(0);
-    }
-
-    .container.right-panel-active .overlay-right {
-      transform: translateX(20%);
-    }
-
-    .social-container {
-      margin: 20px 0;
-    }
-
-    .social-container a {
-      border: 1px solid #DDDDDD;
-      border-radius: 50%;
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0 5px;
-      height: 40px;
-      width: 40px;
-    }
-
-  </style>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
-<h2></h2>
-<div class="container" id="container">
-  <div class="form-container sign-up-container">
-    <form name="f" th:action="@{/register}" method="post">
-      <h1>Create Account</h1>
-      <div class="social-container">
-        <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-        <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-      <span>or use your email for registration</span>
-      <input type="text" id="username" name="username" placeholder="Username" required>
-      <input type="password" id="password" name="password" placeholder="Password" required>
-      <input type="email" id="email" name="email" placeholder="Email"/>
-      <input type="text" id="fullName" name="fullName" placeholder="Full Name"/>
-      <button type="submit">Register</button>
-    </form>
-  </div>
-  <div class="form-container sign-in-container">
-    <form name="f" action="/login" method="POST">
-      <h1>Sign in</h1>
-      <div class="social-container">
-        <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-        <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-      <span>or use your account</span>
-      <input type="text" name="username" placeholder="Username" th:value="${username}">
-      <input type="password" name="password" placeholder="Password" th:value="${password}">
-<!--      <a href="/forgot-password" class="forgot-password">Quên mật khẩu?</a>-->
-      <button name="submit" type="submit" value="submit">Sign In</button>
-    </form>
-    <p th:if="${error == 'true'}">Lỗi đăng nhập</p>
-  </div>
-  <div class="overlay-container">
-    <div class="overlay">
-      <div class="overlay-panel overlay-left">
-        <h1>Welcome Back!</h1>
-        <p>
-          To keep connected with us please login with your personal info
-        </p>
-        <button class="ghost" id="signIn">Sign In</button>
-      </div>
-      <div class="overlay-panel overlay-right">
-        <h1>Hello, Friend!</h1>
-        <p>Enter your personal details and start journey with us</p>
-        <button class="ghost" id="signUp">Sign Up</button>
-      </div>
+<div class="scroll-down">Kéo xuống để đăng nhập
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+    <path d="M16 3C8.832031 3 3 8.832031 3 16s5.832031 13 13 13 13-5.832031 13-13S23.167969 3 16 3zm0 2c6.085938 0 11 4.914063 11 11 0 6.085938-4.914062 11-11 11-6.085937 0-11-4.914062-11-11C5 9.914063 9.914063 5 16 5zm-1 4v10.28125l-4-4-1.40625 1.4375L16 23.125l6.40625-6.40625L21 15.28125l-4 4V9z"/>
+  </svg></div>
+<div class="container"></div>
+<div class="modal">
+  <div class="modal-container">
+    <div class="modal-left">
+      <h1 class="modal-title">Xin chào!</h1>
+      <br>
+<!--      <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p>-->
+      <form name="f" action="/login" method="POST">
+        <div class="input-block">
+          <label class="input-label">Tên đăng nhập</label>
+          <input type="text" name="username" placeholder="Username" th:value="${username}">
+        </div>
+        <div class="input-block">
+          <label class="input-label">Mật khẩu</label>
+          <input type="password" name="password" placeholder="Password" th:value="${password}">
+        </div>
+
+        <div class="modal-buttons">
+          <!--                <a href="" class="">Forgot your password?</a>-->
+          <button class="input-button" name="submit" type="submit" value="submit">Đăng nhập</button>
+        </div>
+        <!--            <p class="sign-up">Don't have an account? <a href="#">Sign up now</a></p>-->
+      </form>
+
     </div>
+    <div class="modal-right">
+      <img src="https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dfd2ec5a01006fd8c4d7592a381d3776&auto=format&fit=crop&w=1000&q=80" alt="">
+    </div>
+    <!--        <button class="icon-button close-button">-->
+    <!--            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">-->
+    <!--                <path d="M 25 3 C 12.86158 3 3 12.86158 3 25 C 3 37.13842 12.86158 47 25 47 C 37.13842 47 47 37.13842 47 25 C 47 12.86158 37.13842 3 25 3 z M 25 5 C 36.05754 5 45 13.94246 45 25 C 45 36.05754 36.05754 45 25 45 C 13.94246 45 5 36.05754 5 25 C 5 13.94246 13.94246 5 25 5 z M 16.990234 15.990234 A 1.0001 1.0001 0 0 0 16.292969 17.707031 L 23.585938 25 L 16.292969 32.292969 A 1.0001 1.0001 0 1 0 17.707031 33.707031 L 25 26.414062 L 32.292969 33.707031 A 1.0001 1.0001 0 1 0 33.707031 32.292969 L 26.414062 25 L 33.707031 17.707031 A 1.0001 1.0001 0 0 0 32.980469 15.990234 A 1.0001 1.0001 0 0 0 32.292969 16.292969 L 25 23.585938 L 17.707031 16.292969 A 1.0001 1.0001 0 0 0 16.990234 15.990234 z"></path>-->
+    <!--            </svg>-->
+    <!--        </button>-->
   </div>
+  <button class="modal-button">Đăng nhập</button>
 </div>
-<script>
-  const signUpButton = document.getElementById('signUp');
-  const signInButton = document.getElementById('signIn');
-  const container = document.getElementById('container');
-
-  signUpButton.addEventListener('click', () => {
-    container.classList.add('right-panel-active');
-  });
-
-  signInButton.addEventListener('click', () => {
-    container.classList.remove('right-panel-active');
-  });
-</script>
+<script th:src="@{/js/login.js}"></script>
 </body>
 </html>
